--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: dreaconnect
 Title: Connection tools to department databases
-Version: 0.0.0.9002
+Version: 0.0.0.9003
 Authors@R: 
     person("Stevens", "Dormezil", , "steves.dormezil@palmbeachschools.org", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-1886-6964"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
