--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
-Imports: 
-    DBI,
+Imports:
     dbplyr,
+    DBI,
     dplyr,
-    odbc
+    magrittr,
+    odbc,
+    tibble
 URL: https://github.com/dormezil/dreaconnect
 BugReports: https://github.com/dormezil/dreaconnect/issues
