new edw_dictionary function loading dictionary into environment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(devl_connect)
 export(edw_connect)
+export(edw_dictionary)
 export(list_tables)
 export(table_connect)
 importFrom(magrittr,"%>%")
